fix: features images invisible (height chain + flex refactor)
.col-right { height: 100% } bloquait align-items: stretch du parent flex
-> la colonne ne faisait que 50px (padding only), ul resolving to 0px,
images rendues à 0x0.

Fix: remplace height: 100% par display:flex + flex-direction:column sur
.col-right et .feature-right, et flex:1 sur ul. Le stretch flex du parent
donne maintenant une hauteur définitive à .col-right (~726px).

--- a/features.css
+++ b/features.css
@@ -87,15 +87,18 @@
   }
 
   .col-right {
-    height: 100%;
+    display: flex;
+    flex-direction: column;
     width: 50%;
 
     .feature-right {
-      height: 100%;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
       padding: 50px 0 0;
 
       ul {
-        height: 100%;
+        flex: 1;
         list-style: none;
         margin: 0;
         padding: 0;
